Fix awards in index to be responsive and fix logo spacing

--- a/css/common.css
+++ b/css/common.css
@@ -54,7 +54,7 @@
 }
 
 .logo img {
-    width: 300px;
+    width: 280px;
 }
 
 nav ul li {
