--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,8 @@
 }
 
 .registerHiring {
-    width: 70%;
+    width: 90%;
+    max-width: 1000px;
     margin: auto;
     padding-top: 0.5em;
 }
@@ -46,20 +47,15 @@
 }
 
 .awards {
-    width: 100%;
-    margin: auto;
     padding: 30px 0;
     text-align: center;
 }
 
 .awards .awardImages {
-    width: 500px;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    margin: auto;
     padding-top: 30px;
 }
 
-.awards .awardImages img {
-    width: 150px;
+.awards .awardImages .row img {
+    width: 100%;
+    height: 100%;
 }
